--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1,9 +1,9 @@
 // $color-primary: #f59a83;
-$color-primary: #f38e82;
-$color-grad-1: #fbdb89;
-$color-grad-2: #f48982;
+$color-primary: teal;
+$color-grad-1: white;
+$color-grad-2: #eb1700;
 
-$color-grey-light-1: #f9f5f3; // Light background
+$color-grey-light-1: white; // Light background
 $color-grey-light-2: #f2efee; // Light lines
 $color-grey-light-3: #d3c7c3; // Light text (placeholder)
 $color-grey-dark-1: #615551; // Normal text
