Improve CSS for other components, including search results, recipe view, and sign up

--- a/src/assets/sass/_components.scss
+++ b/src/assets/sass/_components.scss
@@ -91,7 +91,7 @@
 }
 
 .btn--round {
-  background-image: $gradient;
+  // background-image: $gradient;
   border-radius: 50%;
   border: none;
   cursor: pointer;
