--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -13,6 +13,11 @@ $font-family-sans-serif: DD-TTNorms, -apple-system, BlinkMacSystemFont,
   'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
   'Segoe UI Emoji', 'Segoe UI Symbol';
 $font-weight-base: 400;
+$grid-columns: 16 !default;
+$form-floating-input-padding-t: 2rem;
+$form-floating-input-padding-b: 0.35rem;
+$btn-disabled-opacity: 0.2;
+
 // $display-font-family: 'Nunito Sans', sans-serif;
 // $display-font-style:  null !default;
 
