--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1,5 +1,7 @@
 // $color-primary: #f59a83;
-$color-primary: teal;
+// $color-primary: #0070eb;
+$color-primary: #048848;
+// $color-primary: teal;
 $color-grad-1: white;
 $color-grad-2: #eb1700;
 
