--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -16,10 +16,11 @@ $font-weight-base: 400;
 $grid-columns: 16 !default;
 $form-floating-input-padding-t: 2.3rem;
 $form-floating-input-padding-b: 0.5rem;
-$btn-disabled-opacity: 0.2;
+$btn-disabled-opacity: 0.3;
 $form-floating-label-opacity: 0.85;
 $form-floating-label-transform: scale(0.9) translateY(-0.8rem)
   translateX(0.15rem);
+// $border-color: rgba(rgb(207, 75, 14), 0.375);
 
 // $display-font-family: 'Nunito Sans', sans-serif;
 // $display-font-style:  null !default;
