--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -7,7 +7,7 @@ $color-grad-2: #eb1700;
 
 $color-grey-light-1: white; // Light background
 $color-grey-light-2: #f2efee; // Light lines
-$color-grey-light-3: #d3c7c3; // Light text (placeholder)
+$color-grey-light-3: #e7e7e7; // Light text
 $color-grey-dark-1: #615551; // Normal text
 $color-grey-dark-2: #918581; // Lighter text
 
