--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -19,8 +19,8 @@ $bp-small: 37.5em; // 600px
 $bp-smallest: 31.25em; // 500px
 
 * {
-  margin: 0 !important;
-  padding: 0 !important;
+  margin: 0;
+  padding: 0;
 }
 
 *,
